[gd_scene load_steps=16 format=2]

[ext_resource path="res://menus/maps/falls.gd" type="Script" id=1]
[ext_resource path="res://menus/maps/mapBackgrounds/map_falls.png" type="Texture" id=2]
[ext_resource path="res://sprites/tackbankforest/tree1d.png" type="Texture" id=3]
[ext_resource path="res://sprites/tackbankforest/tree1.png" type="Texture" id=4]
[ext_resource path="res://sprites/tackbankforest/tree1b.png" type="Texture" id=5]
[ext_resource path="res://sprites/tackbankforest/tree1c.png" type="Texture" id=6]
[ext_resource path="res://sprites/tackbankforest/tree3.png" type="Texture" id=7]
[ext_resource path="res://sprites/tackbankforest/tree2.png" type="Texture" id=8]
[ext_resource path="res://gui/scroll_light.png" type="Texture" id=9]
[ext_resource path="res://menus/maps/campNode.tscn" type="PackedScene" id=10]
[ext_resource path="res://menus/maps/harvestingNode.tscn" type="PackedScene" id=11]
[ext_resource path="res://menus/buttons/button_back.tscn" type="PackedScene" id=12]
[ext_resource path="res://menus/maps/mapBackgrounds/animations/mistCloud2.png" type="Texture" id=13]

[sub_resource type="StyleBoxTexture" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 128, 64 )
margin_left = 22.0
margin_right = 22.0
margin_top = 18.0
margin_bottom = 18.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Margin" ]

[sub_resource type="ParticlesMaterial" id=2]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 40, 30, 20 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 90.0
flatness = 0.0
gravity = Vector3( 0, -2, 0 )
initial_velocity = 0.5
initial_velocity_random = 0.0
angular_velocity = -3.69025e+19
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 1.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 0.5
scale_random = 1.0
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Animation", "Color", "Damping", "Emission Shape", "Gravity", "Hue Variation", "Initial Velocity", "Linear Accel", "Scale", "Spread", "Trail" ]

[node name="Node2D" type="Node2D"]

script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -17.0
margin_top = -22.0
margin_right = 591.0
margin_bottom = 1066.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="rocks and grass" type="Node" parent="." index="1"]

[node name="trees" type="Node" parent="." index="2"]

editor/display_folded = true

[node name="tree11" type="Sprite" parent="trees" index="0"]

visible = false
position = Vector2( 301.846, 739.447 )
texture = ExtResource( 3 )

[node name="tree1" type="Sprite" parent="trees" index="1"]

visible = false
position = Vector2( 110, 10 )
texture = ExtResource( 4 )

[node name="tree8" type="Sprite" parent="trees" index="2"]

visible = false
position = Vector2( 300, 330 )
texture = ExtResource( 5 )

[node name="tree9" type="Sprite" parent="trees" index="3"]

visible = false
position = Vector2( 120, 700 )
texture = ExtResource( 6 )

[node name="tree10" type="Sprite" parent="trees" index="4"]

visible = false
position = Vector2( 40, 720 )
texture = ExtResource( 4 )

[node name="tree2" type="Sprite" parent="trees" index="5"]

visible = false
position = Vector2( 450, 60 )
texture = ExtResource( 7 )

[node name="tree3" type="Sprite" parent="trees" index="6"]

visible = false
position = Vector2( 510, 160 )
texture = ExtResource( 6 )

[node name="tree12" type="Sprite" parent="trees" index="7"]

visible = false
position = Vector2( 460, 210 )
texture = ExtResource( 4 )

[node name="tree13" type="Sprite" parent="trees" index="8"]

visible = false
position = Vector2( 480, 280 )
texture = ExtResource( 5 )

[node name="tree14" type="Sprite" parent="trees" index="9"]

visible = false
position = Vector2( 410, 330 )
texture = ExtResource( 5 )

[node name="tree6" type="Sprite" parent="trees" index="10"]

visible = false
position = Vector2( 30, 120 )
texture = ExtResource( 8 )

[node name="tree4" type="Sprite" parent="trees" index="11"]

visible = false
position = Vector2( 100, 210 )
texture = ExtResource( 5 )

[node name="tree5" type="Sprite" parent="trees" index="12"]

visible = false
position = Vector2( 430, 400 )
texture = ExtResource( 8 )

[node name="tree7" type="Sprite" parent="trees" index="13"]

visible = false
position = Vector2( 10, 400 )
texture = ExtResource( 8 )

[node name="mapName" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 140.0
margin_top = 10.0
margin_right = 356.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_styles/normal = SubResource( 1 )
custom_colors/font_color = Color( 0.215686, 0.141176, 0.0156863, 1 )
text = "Felkrath Falls"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_styles" ]

[node name="campNode1" parent="." index="4" instance=ExtResource( 10 )]

margin_left = 100.0
margin_top = 439.0
margin_right = 164.0
margin_bottom = 503.0

[node name="campNode2" parent="." index="5" instance=ExtResource( 10 )]

margin_left = 384.0
margin_top = 35.0
margin_right = 448.0
margin_bottom = 99.0

[node name="campNode3" parent="." index="6" instance=ExtResource( 10 )]

margin_left = 305.0
margin_top = 279.0
margin_right = 369.0
margin_bottom = 343.0

[node name="campNode4" parent="." index="7" instance=ExtResource( 10 )]

margin_left = 369.0
margin_top = 400.0
margin_right = 433.0
margin_bottom = 464.0

[node name="campNode5" parent="." index="8" instance=ExtResource( 10 )]

margin_left = 207.0
margin_top = 942.0
margin_right = 271.0
margin_bottom = 1006.0

[node name="campNode6" parent="." index="9" instance=ExtResource( 10 )]

margin_left = 126.0
margin_top = 711.0
margin_right = 190.0
margin_bottom = 775.0

[node name="campNode7" parent="." index="10" instance=ExtResource( 10 )]

margin_left = 434.0
margin_top = 762.0
margin_right = 498.0
margin_bottom = 826.0

[node name="harvestingNode1" parent="." index="11" instance=ExtResource( 11 )]

margin_left = 460.0
margin_top = 483.0
margin_right = 524.0
margin_bottom = 547.0

[node name="harvestingNode2" parent="." index="12" instance=ExtResource( 11 )]

margin_left = 252.0
margin_top = 595.0
margin_right = 316.0
margin_bottom = 659.0

[node name="button_back" parent="." index="13" instance=ExtResource( 12 )]

[node name="Particles2D" type="Particles2D" parent="." index="14"]

visible = false
modulate = Color( 1, 1, 1, 0.49 )
position = Vector2( 267.093, 456.179 )
emitting = true
amount = 3
lifetime = 6.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.04
randomness = 0.02
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 2 )
texture = ExtResource( 13 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform", "Visibility" ]

[connection signal="pressed" from="button_back" to="." method="_on_button_back_pressed"]


